pkg/kgateway/translator/gateway/testutils/inputs/delegation/basic.yaml
# This test contains a parent route delegating to a child route, based on path prefix.
#
# Input:
# - Parent infra/example-route:
#   - Delegate /a to routes in "a" namespace
#   - Everything else goes to infra/example-svc
# - Child a/route-a:
#   - /a/1 goes to a/svc-a
#
# Expected output routes:
# - /a/1/* -> a/svc-a
# - /* -> infra/example-svc
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route
  namespace: infra
spec:
  parentRefs:
  - name: example-gateway
  hostnames:
  - "example.com"
  rules:
  - backendRefs:
    - name: example-svc
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /a
    backendRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: "*"
      namespace: a
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-a
  namespace: a
spec:
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /a/1
    backendRefs:
    - name: svc-a
      port: 8080
