pkg/kgateway/translator/gateway/testutils/inputs/delegation/basic_invalid_hostname.yaml
# This test contains a parent route that delegates to a child route with a hostname
# that doesn't match that of the parent (so the child route is dropped).
#
# Input:
# - Parent infra/example-route:
#   - Delegate /a to routes in "a" namespace
#   - Everything else goes to infra/example-svc
# - Child a/route-a:
#   - /a/1 goes to a/svc-a
#   - hostname (foo.com) is different from parent (example.com)
#
# Expected output:
# - /* -> infra/example-svc
# - no /a/1 route because of mismatched hostnames
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route
  namespace: infra
spec:
  parentRefs:
  - name: example-gateway
  hostnames:
  - "example.com"
  rules:
  - backendRefs:
    - name: example-svc
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /a
    backendRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: "*"
      namespace: a
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-a
  namespace: a
spec:
  hostnames:
  - "foo.com" # hostname must not be set on delegatee
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /a/1
    backendRefs:
    - name: svc-a
      port: 8080
