pkg/kgateway/translator/gateway/testutils/inputs/delegation/multiple_children.yaml
# This test contains a parent route that delegates to child routes in two different
# namespaces.
#
# Input:
# - Parent infra/example-route:
#   - Delegate /a to routes in "a" namespace
#   - Delegate /b to routes in "b" namespace
#   - Everything else goes to infra/example-svc
# - Child a/route-a:
#   - /a/1 goes to a/svc-a
# - Child b/route-b:
#   - /b/.* goes to b/svc-b
#
# Expected output routes:
# - /a/1 -> a/svc-a
# - /b/.* -> b/svc-b
# - /* -> infra/example-svc
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route
  namespace: infra
spec:
  parentRefs:
  - name: example-gateway
  hostnames:
  - "example.com"
  rules:
  - backendRefs:
    - name: example-svc
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /a
    backendRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: "*"
      namespace: a
  - matches:
    - path:
        type: PathPrefix
        value: /b
    backendRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: "*"
      namespace: b
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-a
  namespace: a
spec:
  rules:
  - matches:
    - path:
        type: Exact
        value: /a/1
    backendRefs:
    - name: svc-a
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-b
  namespace: b
spec:
  rules:
  - matches:
    - path:
        type: RegularExpression
        value: /b/.*
    backendRefs:
    - name: svc-b
      port: 8080
