pkg/kgateway/translator/gateway/testutils/inputs/delegation/traffic_policy_multi_level_inheritance_override_enabled.yaml
# This test consists of 3 routes (parent, child, grandchild) and 4 traffic policies
# (transformation, rate limit, and rate limit + ext proc), each targeting a different route.
#
# Input:
# - Parent infra/example-route:
#   - Delegate /mid to routes in mid namespace
#   - Enables policy override
# - Child mid/mid-a:
#   - Delegate /mid/a to routes in "a" namespace
#   - Enables policy override
# - Child mid/mid-b:
#   - Delegate /mid/b to routes in "b" namespace
#   - No policy override
# - Child a/a1:
#   - /mid/a/1 goes to a/svc-a
# - Child b/b1:
#   - /mid/b/1 goes to b/svc-b
# - TrafficPolicy infra/example-policy:
#   - specifies response transformation and rateLimit
# - TrafficPolicy mid/mid:
#   - specifies response transformation and rateLimit
# - TrafficPolicy a/a1 and b/b1:
#   - specifies response transformation, rateLimit, extProc
#
# Expected output routes:
# - Both mid/mid-a and mid/mid-b should be able to override the policy attached to parent infra/example-route
# - a/a1 should be able to override policy attached to mid/mid-a
# - b/b1 should not be able to override policy attached to mid/mid-b
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route
  namespace: infra
  # ShallowMergePreferChild is implicit
  # annotations:
  #   kgateway.dev/inherited-policy-priority: ShallowMergePreferChild
spec:
  parentRefs:
  - name: example-gateway
  hostnames:
  - "example.com"
  rules:
  - backendRefs:
    - name: example-svc
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /mid
    backendRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: "*"
      namespace: mid
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mid-a
  namespace: mid
  # Default policy is being explicitly set
  annotations:
    kgateway.dev/inherited-policy-priority: ShallowMergePreferChild
spec:
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /mid/a
    backendRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: "*"
      namespace: a
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mid-b
  namespace: mid
  annotations:
    kgateway.dev/inherited-policy-priority: ShallowMergePreferParent 
spec:
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /mid/b
    backendRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: "*"
      namespace: b
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: a1
  namespace: a
spec:
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /mid/a/1
    backendRefs:
    - name: svc-a
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: b1
  namespace: b
spec:
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /mid/b/1
    backendRefs:
    - name: svc-b
      port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: extproc
  namespace: a
spec:
  ports:
  - port: 9091
    protocol: TCP
    appProtocol: kubernetes.io/h2c
    targetPort: 9091
  selector:
    app: extproc
---
apiVersion: v1
kind: Service
metadata:
  name: extproc
  namespace: b
spec:
  ports:
  - port: 9091
    protocol: TCP
    appProtocol: kubernetes.io/h2c
    targetPort: 9091
  selector:
    app: extproc
