pkg/kgateway/translator/gateway/testutils/inputs/delegation/traffic_policy_route_policy.yaml
# This test contains a parent route that delegates to a child route. A traffic policy targets
# the parent route.
# This is mainly to ensure no nil pointer dereference when applying the policy,
# since a parent route rule with a delegated backend will not have outputRoute.RouteAction set.
# Testing with autoHostRewrite since it is applied to the route action.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route
  namespace: infra
spec:
  parentRefs:
  - name: example-gateway
  hostnames:
  - "example.com"
  rules:
  - backendRefs:
    - name: example-svc
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /a
    backendRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: "*"
      namespace: a
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-a
  namespace: a
spec:
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /a/1
    backendRefs:
    - name: svc-a
      port: 8080
