pkg/kgateway/translator/gateway/testutils/inputs/delegation/unresolved_ref.yaml
# This test contains 3 levels of delegation (parent -> child -> grandchild).
#
# Input:
# - Parent infra/example-route:
#   - Delegate /a to routes in "a" namespace
#   - Delegate /b to routes in "b" namespace -> results in an unresolved reference (500 direct response)
#   - Everything else goes to infra/example-svc
# - Child a/route-a:
#   - /a/1 goes to a/svc-a
#   - Delegate /a/b to route a-b/route-a-b
#   - Delegate /a/c to routes in a-c namespace -> results in an unresolved reference (500 direct response)
# - Child a-b/route-a-b:
#   - /a/b/1 goes to a-b/svc-a-b
#
# Expected output routes:
# - /a/b/1 -> a-b/svc-a-b
# - /a/1 -> a/svc-a
# - /a/c -> 500 direct response 
# - /b -> 500 direct response
# - /* -> infra/example-svc
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route
  namespace: infra
spec:
  parentRefs:
  - name: example-gateway
  hostnames:
  - "example.com"
  rules:
  - backendRefs:
    - name: example-svc
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /a
    backendRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: "*"
      namespace: a
  # Unresolved ref
  - matches:
    - path:
        type: PathPrefix
        value: /b
    backendRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: "*"
      namespace: b
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-a
  namespace: a
spec:
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /a/1
    backendRefs:
    - name: svc-a
      port: 8080
  - matches:
    - path:
        type: PathPrefix
        value: /a/b
    backendRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: "route-a-b"
      namespace: a-b
  # Unresolved ref
  - matches:
    - path:
        type: PathPrefix
        value: /a/c
    backendRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: a-c
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-a-b
  namespace: a-b
spec:
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /a/b/1
    backendRefs:
    - name: svc-a-b
      port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: svc-a-b
  namespace: a-b
spec:
  ports:
    - protocol: TCP
      port: 8080
